# noeris

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.noeris/: cost-model-training.json  cost-model.pkl
docs/: BACKLOG.md  BENCHMARKS.md  CI.md  COMPANY_PLAN.md  NAME_SHORTLIST.md  RESEARCH_AGENDA.md  RESEARCH_LANDSCAPE.md  RESEARCH_MEMORY.md  RESEARCH_OS.md  ROADMAP.md  TECHNICAL_START.md  THESIS.md  VERIFICATION.md  cost_model_analysis.md
models/: cost_model_v2.pkl
noeris/: __init__.py  _autograd.py  _detect.py  _modules.py  patch.py
scripts/: adaptive_benchmark.py  adaptive_router_ablation.py  autotune_comparison.py  check_history_regressions.py  check_public_claim_artifacts.py  ci_local.sh  colab_bombshell.py  colab_iterate.py  colab_validate_all.py  collect_cost_model_data.py  compiler_analysis.py  convergence_experiment.py  cost_model_ablation.py  cross_vendor_transfer_eval.py  cross_vendor_zero_shot_scaffold.py  end_to_end_layer_stack.py  ensemble_ablation.py  fp8_config_space_pack.py  fp8_hopper_probe.py  fp8_layout_reuse_policy_h100.py  fp8_layout_runtime_cache_benchmark.py  fp8_layout_runtime_integration_benchmark.py  fp8_layout_runtime_integration_token_loop_benchmark.py  fp8_prepack_amortization_h100.py  fp8_triton_matmul_autotune_h100.py  fp8_triton_matmul_autotune_h100_v2.py  fp8_triton_matmul_autotune_h100_v3.py  fp8_triton_matmul_autotune_h100_v4_splitk.py  fp8_triton_matmul_probe.py  gemma4_layer_benchmark_pack.py  hardware_cross_learning.py  kaggle_poll.py  kv_quant_write_fused_benchmark.py  kv_quant_write_runtime_benchmark.py  kv_shared_benchmark.py  llm_kernel_search.py  lora_finetune_benchmark.py  modal_cleanup.sh  modal_e2e_a100.py  (+15 more)
(+425 files in other folders)
