[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ml-research"
version = "0.1.0"
description = "Benchmark-first autonomous ML/LLM research engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Peak" }]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

