[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noeris"
version = "0.1.0"
description = "Drop-in training accelerator for HuggingFace transformers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Doruk Tan Ozturk" }]
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "triton>=2.2",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "transformers>=4.36",
    "pytest>=7.0",
]
research = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[tool.setuptools]
package-dir = { "" = "src", "noeris" = "noeris" }

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["research_engine*", "noeris*"]

